--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "npm run compile && mocha --harmony",
+    "test": "embark test",
+    "build": "embark build --contracts",
     "compile": "solcpiler --solc-version v0.4.18+commit.9cf6e910",
-    "lint": "solium --dir contracts",
-    "clean": "rm -rf build/",
-    "prepublish": "npm run clean && npm run compile"
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -31,17 +30,16 @@
   },
   "homepage": "https://github.com/Giveth/lpp-milestones#readme",
   "dependencies": {
-    "@aragon/os": "3.1.9",
+    "@aragon/os": "4.0.1",
+    "embark": "4.0.0-beta.0",
     "giveth-bridge": "1.0.4",
-    "giveth-liquidpledging": "1.0.0"
+    "giveth-liquidpledging": "2.0.0-beta.1"
   },
   "devDependencies": {
+    "embark-solc": "git+https://git@github.com/embark-framework/embark-solc.git#722c123",
     "chai": "^4.1.2",
     "eslint": "^4.3.0",
-    "eth-contract-class": "0.0.12",
-    "ganache-cli": "^6.1.2",
-    "minimetoken": "^0.2.0",
-    "solcpiler": "1.0.0-beta.8",
+    "eth-contract-class": "^0.0.13-beta.1",
     "solium": "^1.0.9",
     "web3": "1.0.0-beta.34"
   }
