--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "embark test",
-    "build": "embark build --contracts",
+    "test": "npm run compile && mocha --harmony",
     "compile": "solcpiler --solc-version v0.4.18+commit.9cf6e910",
     "prepublish": "npm run build"
   },
@@ -30,16 +29,18 @@
   },
   "homepage": "https://github.com/Giveth/lpp-milestones#readme",
   "dependencies": {
-    "@aragon/os": "4.0.1",
-    "embark": "4.0.0-beta.0",
+    "@aragon/os": "3.1.9",
     "giveth-bridge": "1.0.4",
-    "giveth-liquidpledging": "2.0.0-beta.1"
+    "giveth-liquidpledging": "1.0.0"
   },
   "devDependencies": {
-    "embark-solc": "git+https://git@github.com/embark-framework/embark-solc.git#722c123",
     "chai": "^4.1.2",
     "eslint": "^4.3.0",
-    "eth-contract-class": "^0.0.13-beta.1",
+    "eth-contract-class": "0.0.12",
+    "ganache-cli": "^6.1.2",
+    "lerna": "^2.2.0",
+    "minimetoken": "^0.2.0",
+    "solcpiler": "1.0.0-beta.8",
     "solium": "^1.0.9",
     "web3": "1.0.0-beta.34"
   }
