--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "lpp-milestones",
-  "version": "1.0.0-beta.1",
+  "version": "2.0.0-beta.1",
   "description": "LiquidPledging milestone contracts",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "npm run compile && mocha --harmony",
-    "compile": "solcpiler --solc-version v0.4.18+commit.9cf6e910",
-    "prepublish": "npm run compile"
+    "test": "embark test",
+    "lint": "solium --dir contracts",
+    "build": "embark build --contracts",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -29,18 +30,17 @@
   },
   "homepage": "https://github.com/Giveth/lpp-milestones#readme",
   "dependencies": {
-    "@aragon/os": "3.1.9",
+    "@aragon/os": "4.0.1",
+    "embark": "4.0.0-beta.0",
     "giveth-bridge": "1.0.4",
-    "giveth-liquidpledging": "1.0.0"
+    "giveth-liquidpledging": "2.0.0-beta.2"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "embark-solc": "git+https://git@github.com/embark-framework/embark-solc.git#develop",
     "eslint": "^4.3.0",
-    "eth-contract-class": "0.0.12",
-    "ganache-cli": "^6.1.2",
+    "eth-contract-class": "^0.0.13-beta.1",
     "lerna": "^2.2.0",
     "minimetoken": "^0.2.0",
-    "solcpiler": "1.0.0-beta.8",
     "solium": "^1.0.9",
     "web3": "1.0.0-beta.34"
   }
