--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
   "homepage": "https://github.com/Giveth/lpp-milestones#readme",
   "dependencies": {
     "@aragon/os": "4.0.1",
-    "embark": "4.0.0-beta.0",
+    "embark": "^4.0.2",
     "giveth-bridge": "1.0.4",
     "giveth-liquidpledging": "2.0.0-beta.2"
   },
   "devDependencies": {
     "embark-solc": "git+https://git@github.com/embark-framework/embark-solc.git#develop",
+    "embarkjs-connector-web3": "^4.0.0",
     "eslint": "^4.3.0",
     "eth-contract-class": "^0.0.13-beta.1",
     "lerna": "^2.2.0",
